--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,32 +1,413 @@
 @charset "utf-8";
-/* z-index: modal 11, header10; button9 */
-
 
 main{
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 120px;
-    overflow: hidden;
+  margin-top:120px;
+  width:100%;
 }
-.banner_wrap{
-    width: 100%;
-    height: 300px;
-    background-color: blue;
+.visual_wrap{
+  width:100%;
+  background-color:#131987;
+}
+.visual{
+  width:78.6%;
+  margin:0 auto;
+  padding: 80px 0;
+  color:#fff;
+  font-family: 'NanumSquareLight';
+  line-height:1.2;
+  text-align:center;
+}
+.visual p:nth-of-type(1){
+  font-size: calc(1.2rem + 1vw);
+}
+.visual p:nth-of-type(2){
+  margin-top:4px;
+  display:inline-block;
+  font-size:calc(1.4rem + 1vw);
+}
+.visual p:nth-of-type(2) span{
+  display:inline-block;
+  font-family: 'NanumSquareExtraBold';
+}
+.visual p:last-of-type{
+  font-size: calc(2.8rem + 1vw);
+  margin: 20px 0 48px;
+}
+.visual p:last-of-type span{
+  font-family: 'NanumSquareExtraBold';
+  background-color:#fff;
+  color:#131987;
+  padding: 0 4px;
+}
+.search_main_wrap{
+  width:100%;
+  max-width:480px;
+  padding: 12px 40px;
+  background-color:rgba(255,255,255,0.3);
+  border:3px solid #fff;
+  border-radius: 36px;
+  margin:0 auto;
+}
+.search_main_wrap fieldset{
+  width:100%;
+  display:flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+}
+.search_main_wrap input{
+  width:100%;
+  background:none;
+  border:none;
+  color:#fff;
+  font-size:calc(1.2rem + 0.5vw);
+}
+.search_main_wrap input::placeholder{
+  color:rgba(255,255,255,0.6);
+}
+.search_btn{
+  width:20px; 
+  height:20px; 
+  background:url(./images/btn_search_wh.png) no-repeat center/contain;
+}
+.visual>span:last-child{
+  display:block;
+  margin-top:20px;
+  font-size:calc(1.2rem + 0.5vw);
+  text-align:center;
+
+}
+.visual>span:last-child a{
+  display:inline-block;
+  margin-top:4px;
+  text-decoration: underline;
+}
+/* visual end */
+.recentReview_wrap{
+  width:78.6%;
+  margin:0 auto;
+  margin-top:160px;
+}
+.recentReview_wrap h2{
+  font-size:2rem;
+  font-family: 'NanumSquareExtraBold';
+}
+.recentReview{
+  width:100%;
+  margin-top:16px;
+  text-align: right;
+}
+.btn_recentReview{
+  font-size:1.4rem;
+  cursor: pointer;
+  display:inline-block;
+}
+.btn_recentReview::after{
+  content:"";
+  display:inline-block;
+  margin-left:8px;
+  width:12px;
+  height:12px;
+  background:url(./images/ico_arrow_R.png) no-repeat center/contain;
+}
+.recenetReview_con_wrap{
+  text-align:left;
+  width:100%;
 }
 
-.contents_wrap{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 180px;
-    background-color: blueviolet;
-    gap: 60px;
+.recenetReview_con{
+  padding: 20px 9%;
+  background-color: #ECECEC;
+  border-radius: 5px;
+  margin:20px 0;
 }
-.contents_wrap>div:nth-of-type(1){
-    font-size: 1.6rem;
-    font-weight: 700;
+.recenetReview_con strong{
+  font-weight:normal;
+  font-size:1.4rem;
+}
+.recenetReview_con p{
+  display:none;
+}
+.recenetReview_con_bottom{
+  margin-top: 8px;
+  width:100%;
+  display:flex;
+  justify-content: right;
+  flex-wrap: wrap;
+  gap:8px;
+  color:#888;
+  font-size:1.2rem;
+}
+.recenetReview_con_bottom div{
+  width:27.8%;
+  height:auto;
+  line-height:1;
+  padding-bottom:1vw;
+  background:url(./images/star_bg.png) no-repeat right/contain;
+}
+.recenetReview_con_bottom ul{
+  display:flex;
+  justify-content: right;
+  gap: 8px;
 }
 
+.recenetReview_con strong{
+  line-height:1.4;
+  display:block;
+  width:100%;
+  height:2.3rem;
+  overflow-y:hidden;
+}
+
+.recenetReview_con.focus p{
+  display:block;
+}
+.recenetReview_con.focus{
+  padding: 40px 9% 28px 9%;
+  background-color: #EBECFF;
+  border-radius:5px;
+  font-size:1.2rem;
+  line-height:1.4;
+}
+.recenetReview_con.focus strong{
+  font-size:1.4rem;
+  font-family: 'NanumSquareBold';
+  height:auto;
+}
+.recenetReview_con.focus p:nth-of-type(1){
+  margin-top:14px;
+  margin-bottom:8px;
+}
+.recenetReview_con.focus span{
+  display:block;
+  font-family: 'NanumSquareBold';
+}
+
+.main_bottom_banner_wrap{
+  width:78.6%;
+  margin: 120px auto 44px;
+}
+.main_bottom_banner{
+  width:100%;
+  height:234px;
+  border-radius: 5px;
+  background: #888 url() no-repeat center/contain;
+}
+
+/* main end */
+/* moblie end */
+
+/* tablet_768 */
+@media screen and (min-width:768px) {
+
+  .input_search{
+    top:-52px;
+    font-size:2rem;
+  }
+    
+  nav form button{
+    top:-52px;
+    width:20px;
+    height:20px;
+  }
+  nav ul{
+    font-size:2rem;
+  }
+  nav>div:last-child{
+    font-size:2rem;
+  }
+  /* header end */
+  
+  /* main{
+    width:100%;
+  }
+  .visual_wrap{
+    width:100%;
+    background-color:#131987;
+  } */
+  .visual{
+    width:85.9%;
+    /* margin:0 auto; */
+    /* padding: 80px 0; */
+    color:#fff;
+    /* font-family: 'NanumSquareLight'; */
+    /* line-height:1.2; */
+    /* text-align:center; */
+  }
+  .visual p:nth-of-type(1){
+    font-size:2.4rem;
+  }
+  .visual p:nth-of-type(2){
+    /* margin-top:4px; */
+    /* display:inline-block; */
+    font-size:2.4rem;
+  }
+  .visual p:nth-of-type(2) span{
+    /* display:inline-block; */
+    /* font-family: 'NanumSquareExtraBold'; */
+  }
+  .visual p:last-of-type{
+    font-size: 4.8rem;
+    /* margin: 20px 0 48px; */
+  }
+  .visual p:last-of-type span{
+    /* font-family: 'NanumSquareExtraBold';
+    background-color:#fff;
+    color:#131987;
+    padding: 0 4px; */
+  }
+  .search_main_wrap{
+    /* width:100%; *
+    max-width:480px; */
+    max-width:none;
+    width:78.6%;
+    /* padding: 12px 40px;
+    background-color:rgba(255,255,255,0.3);
+    border:3px solid #fff;
+    border-radius: 36px;
+    margin:0 auto; */
+  }
+  .search_main_wrap fieldset{
+    width:100%;
+    display:flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+  }
+  .search_main_wrap input{
+    width:100%;
+    background:none;
+    border:none;
+    color:#fff;
+    font-size:1.6rem;
+  }
+  .search_main_wrap input::placeholder{
+    color:rgba(255,255,255,0.6);
+  }
+  .search_btn{
+    width:24px; 
+    height:24px; 
+    background:url(./images/btn_search_wh.png) no-repeat center/contain;
+  }
+  .visual>span:last-child{
+    display:block;
+    margin-top:20px;
+    font-size:1.6rem;
+  }
+  .visual>span:last-child a{
+    display:inline-block;
+    margin-top:4px;
+    text-decoration: underline;
+  }
+  /* visual end */
+  .recentReview_wrap{
+    width:78.6%;
+    margin:0 auto;
+    margin-top:160px;
+  }
+  .recentReview_wrap h2{
+    font-size:2rem;
+    font-family: 'NanumSquareExtraBold';
+  }
+  .recentReview{
+    width:100%;
+    margin-top:16px;
+    text-align: right;
+  }
+  .btn_recentReview{
+    font-size:1.4rem;
+    cursor: pointer;
+    display:inline-block;
+  }
+  .btn_recentReview::after{
+    content:"";
+    display:inline-block;
+    margin-left:8px;
+    width:12px;
+    height:12px;
+    background:url(./images/ico_arrow_R.png) no-repeat center/contain;
+  }
+  .recenetReview_con_wrap{
+    text-align:left;
+    width:100%;
+  }
+  
+  .recenetReview_con{
+    padding: 20px 9%;
+    background-color: #ECECEC;
+    border-radius: 5px;
+    margin:20px 0;
+  }
+  .recenetReview_con strong{
+    font-weight:normal;
+    font-size:1.4rem;
+  }
+  .recenetReview_con p{
+    display:none;
+  }
+  .recenetReview_con_bottom{
+    margin-top: 8px;
+    width:100%;
+    display:flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    gap:8px;
+    color:#888;
+    font-size:1.2rem;
+  }
+  .recenetReview_con_bottom div{
+    width:27.8%;
+    height:auto;
+    line-height:1;
+    padding-bottom:1vw;
+    background:url(./images/star_bg.png) no-repeat right/contain;
+  }
+  .recenetReview_con_bottom ul{
+    display:flex;
+    justify-content: right;
+    gap: 8px;
+  }
+  
+  .recenetReview_con strong{
+    line-height:1.4;
+    display:block;
+    width:100%;
+    height:2.3rem;
+    overflow-y:hidden;
+  }
+  
+  .recenetReview_con.focus p{
+    display:block;
+  }
+  .recenetReview_con.focus{
+    padding: 40px 9% 28px 9%;
+    background-color: #EBECFF;
+    border-radius:5px;
+    font-size:1.2rem;
+    line-height:1.4;
+  }
+  .recenetReview_con.focus strong{
+    font-size:1.4rem;
+    font-family: 'NanumSquareBold';
+    height:auto;
+  }
+  .recenetReview_con.focus p:nth-of-type(1){
+    margin-top:14px;
+    margin-bottom:8px;
+  }
+  .recenetReview_con.focus span{
+    display:block;
+    font-family: 'NanumSquareBold';
+  }
+  
+  .main_bottom_banner_wrap{
+    width:78.6%;
+    margin: 120px auto 44px;
+  }
+  .main_bottom_banner{
+    width:100%;
+    height:234px;
+    border-radius: 5px;
+    background: #888 url() no-repeat center/contain;
+  }
+  
+}
+  /* main end */
